NetTiers ChangeLog
=====================================

Version 0.9.3, codename "Caribert"
-------------------------------------

<<<<<<< CHANGELOG.TXT
01/31/2006
	- Fix of databinding bug (canceledit)

=======
12/12/2005
	- FIX: Made WebAdminOutputPath optional and added code to log message when GenerateWebAdmin is set to true and no path has been specified.

>>>>>>> 1.19
12/09/2005
	- BUG [ 1368498 ] Wrong references to Business Logic Layer
	- BUG [ 1295649 ] Find Function Causing Error
	- BUG [ 1368975 ] Bug in Find SQL procedure
	- BUG [ 1366379 ] View column name with space
	- BUG [ 1374466 ] (NetTiers) Stored procedure Fix

12/05/2005
	- BUG: Bugs item #1372778 - DeepLoad/DeepSave not generated if includeRelation is set to false 

12/03/2005
	- FIX: Enum.cst '-' char are replaced by '_' 
	- Fix: DeletedItems are now processed in DeepSave

12/01/2005
	- FIX: add the new data access method to the WebServiceClient provider

11/30/2005
	- FIX: vsnet2005.project.cst and NetTiers.cst were adding references to NetTiers.Configuration.dll rather than NetTiers.Configuration.2005.dll
	- NEW: New template properties (GenerateWebAdmin, WebAdminOutputPath) for generating Admin Entity user controls for .Net 2
		http://forum.codesmithtools.com/default.aspx?f=19&m=8294

11/28/2005
	- NEW: New data access method exposed on the DataProvider
			
			#region "ExecuteNonQuery"
			public abstract int ExecuteNonQuery(string storedProcedureName, params object[] parameterValues);		
			public abstract int ExecuteNonQuery(TransactionManager transactionManager, string storedProcedureName, params object[] parameterValues);
			
			public abstract void ExecuteNonQuery(Microsoft.Practices.EnterpriseLibrary.Data.DBCommandWrapper commandWrapper);
			public abstract void ExecuteNonQuery(TransactionManager transactionManager, Microsoft.Practices.EnterpriseLibrary.Data.DBCommandWrapper commandWrapper);
	
			public abstract int ExecuteNonQuery(CommandType commandType, string commandText);