@@ -535,11 +535,11 @@ public void Go()
 	
 	// Build Namespaces
 	if (BusinessLogicLayerNameSpace == null) BusinessLogicLayerNameSpace = string.Empty;
-	string BLLNameSpace = NameSpace + (BusinessLogicLayerNameSpace.Length>0 ? "." + GetCleanName(BusinessLogicLayerNameSpace) : string.Empty);
-	string DALNameSpace = NameSpace + "." + (DataAccessLayerNameSpace.Length>0 ? GetCleanName(DataAccessLayerNameSpace) : "DataAccessLayer");
+	string BLLNameSpace = NameSpace + (BusinessLogicLayerNameSpace.Length>0 ? "." + GetCleanName2(BusinessLogicLayerNameSpace) : string.Empty);
+	string DALNameSpace = NameSpace + "." + (DataAccessLayerNameSpace.Length>0 ? GetCleanName2(DataAccessLayerNameSpace) : "DataAccessLayer");
 	string DALSqlNameSpace = DALNameSpace  + ".SqlClient";
 	string DALWSNameSpace = DALNameSpace  + ".WebServiceClient";
-	string UTNameSpace = NameSpace + "." + (UnitTestsNameSpace.Length>0 ? GetCleanName(UnitTestsNameSpace) : "UnitTests");
+	string UTNameSpace = NameSpace + "." + (UnitTestsNameSpace.Length>0 ? GetCleanName2(UnitTestsNameSpace) : "UnitTests");
 	string WSNameSpace = DALNameSpace + ".WebService";
 	
 	// Build output pathes
@@ -712,12 +712,12 @@ public void Go()
 	}
 
 	
-	_CurrentPhase = "CREATING FOLDERS AND COPYING DEPENDANCIES ";
+	_CurrentPhase = "CREATING FOLDERS AND COPYING DEPENDENCIES ";
 	
 	//----------------------------------------------------------------------------------------------------------------------------------------------
-	// CREATING FOLDERS AND COPYING DEPENDANCIES.
+	// CREATING FOLDERS AND COPYING DEPENDENCIES.
 	//----------------------------------------------------------------------------------------------------------------------------------------------
-	AddFileNode(initNode, "Creating folders and copying dependancies.");
+	AddFileNode(initNode, "Creating folders and copying dependencies.");
 	SafeCreateDirectory(OutputDirectory + "\\References");
 	
 	if(GenerateBusinessLogicLayer)
@@ -777,7 +777,7 @@ public void Go()
 	}
 		
 	//----------------------------------------------------------------------------------------------------------------------------------------------
-	// Copy Data Access Layer dependancies
+	// Copy Data Access Layer dependencies
 	//----------------------------------------------------------------------------------------------------------------------------------------------
 	if (vsnetVersion == VSNetVersion.v2003)
 	{
@@ -804,7 +804,7 @@ public void Go()
 	
 
 	//----------------------------------------------------------------------------------------------------------------------------------------------
-	// Copy WebServices dependancies
+	// Copy WebServices dependencies
 	//----------------------------------------------------------------------------------------------------------------------------------------------
 	/*if (GenerateWebservice)
 	{
