@@ -4,6 +4,11 @@ NetTiers ChangeLog
 Version 0.9.3, codename "Caribert"
 -------------------------------------
 
+03/10/2006
+	- FIX: [ 1399169 ] BLL and DAL Namespaces don't support dots
+		- added GetCleanName2 function that does not remove periods.
+	- FIX: [ 1443692 ] Misspelling in NetTiers.cst 
+
 <<<<<<< CHANGELOG.TXT
 01/31/2006
 	- Fix of databinding bug (canceledit)
